--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,24 +1,34 @@
 .lead__image {
-    max-height: 615px;
     max-width: 984px;
     display: block;
     white-space: normal;
-    width: 100%;
-    height: 100%;
+    aspect-ratio: 16 / 10;
     object-fit: cover;
     justify-items: stretch;
-    max-width: 100%;
     padding: 9px 0 0 0;
 }
 
 @media screen and (max-width: 1024px) {
     .lead__image {
         padding: 9px 0 0 0;
-        max-height: 480px;
         max-width: 768px;
     }
 }
 
+
+@media screen and (max-width: 785px) {
+    .lead__image {
+        padding: 9px 0 0 0;
+        max-width: 500px;
+    }
+}
+
+@media screen and (max-width: 518px) {
+    .lead__image {
+        padding: 9px 0 0 0;
+        max-width: 320px;
+    }
+}
 
 @media screen and (max-width: 320px) {
     .lead__image {
