--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,16 +1,48 @@
 .cover__link {
     text-decoration: none;
-    background: rgba(42, 44, 47, 0.3);
+    background-image: url(../../../images/cover-trains.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     width: 100%;
+    min-height: 740px;
+    position: relative;
+    display: flex;
     text-align: center;
-    height: 100%;
     align-items: center;
     justify-content: center;
-    display: flex;
     flex-direction: column;
-    max-width: 1184px;
+    }
+
+.cover__link::before {
+    background: rgba(42, 44, 47, 0.3);
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    content: "";
 }
 
-.cover__link:hover {
+.cover__link:hover::before {
     background: rgba(42, 44, 47, 0.8);
+}
+
+@media screen and (max-width: 1024px) {
+    .cover__link {
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover__link {
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__link {
+        min-height: 200px;
+    }
 }
