--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 /* cover */
 .cover {
-    background-image: url(../../images/cover-trains.jpg);
+    /*background-image: url(../../images/cover-trains.jpg);
     background-size: cover;
     background-position: center;
     max-width: 1184px;
@@ -8,7 +8,7 @@
     height: auto;
     background-repeat: no-repeat;
     background-origin: border-box;
-    box-sizing: border-box;
+    box-sizing: border-box;*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,18 +16,19 @@
     padding: 0 0 0 0;
     text-align: center;
     flex-direction: column;
+    max-width: 1184px;
 }
 
 @media screen and (max-width: 768px) {
     .cover {
-        margin: 90px auto 0 auto;
+        margin-top: 90px;
         max-width: 768px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover {
-        margin: 66px auto 0 auto;
+        margin-top: 66px;
         max-width: 320px;
     }
 }
