--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,25 +3,32 @@
 .footer {
     max-width: 1184px;
     margin: 0 auto 0 auto;
-    padding: 92px 0 24px 0;
+    padding: 90px 0 24px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 @media screen and (max-width: 1024px) {
     .footer {
         max-width: 928px;
+        padding-top: 92px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .footer {
         max-width: 720px;
-        padding: 88px 0 24px 0;
+        padding-top: 88px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .footer {
         max-width: 288px;
-        padding: 57px 0 16px 0;
+        padding: 65px 0 16px 0;
+        flex-direction: column;
     }
 }
+
