--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -11,9 +11,11 @@
 
 .header__lang-link:hover {
     opacity: 0.8;
-
 }
 
+.header__lang-link:first-child {
+    padding-right: 18px;
+}
 
 @media screen and (max-width: 320px) {
     .header__lang-link {
