--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -4,18 +4,19 @@
     display: flex;
     flex-direction: row;
     margin: 0;
-    padding: 0 48px 4px 0;
+    padding: 0 30px 4px 0;
     align-self: flex-end;
 }
 
 @media screen and (max-width: 768px) {
     .header__links {
-        padding: 0 24px 4px 0;
+        padding-right: 6px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .header__links {
-        padding: 0 16px 6px 0;
+        padding-right: 0px;
+        padding-bottom: 6px;
     }
 }
