--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,12 +1,12 @@
 .header__logo {
     width: 176px;
     height: 52px;
-    padding: 0 0 0 48px;
+    padding-left: 48px;
 }
 
 @media screen and (max-width: 768px) {
     .header__logo {
-        padding: 0 0 0 24px;
+        padding-left: 24px;
     }
 }
 
@@ -14,6 +14,6 @@
     .header__logo {
         width: 142px;
         height: 42px;
-        padding: 0 0 0 16px;
+        padding-left: 16px;
     }
 }
