--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,9 +1,10 @@
 .intro__list {
-    padding: 33px 0 0 0;
+    padding-top: 33px;
+    padding-left: 0;
     margin: 0;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
     line-height: 18px;
+    list-style-type: none;
 }
