--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,7 +3,7 @@
 .intro {
     max-width: 984px;
     margin: 0 auto 0 auto;
-    padding: 93px 0 0 0;
+    padding-top: 93px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -15,14 +15,13 @@
 @media screen and (max-width: 768px) {
     .intro {
         max-width: 720px;
-        padding: 90px 0 0 0;
+        padding-top: 90px;
     }
 }
-
 
 @media screen and (max-width: 320px) {
     .intro {
         max-width: 288px;
-        padding: 64px 0 0 0;
+        padding-top: 64px;
     }
 }
