--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,23 +1,24 @@
 .lead__caption {
-
-    max-height: 14px;
     font-style: normal;
     font-weight: 400;
     font-size: 10px;
     line-height: 14px;
     letter-spacing: 1.5px;
     text-transform: uppercase;
-    padding: 8px 0 0 0;
+    padding-top: 8px;
 }
 
-@media screen and (max-width: 1024px) {
+
+@media screen and (max-width: 768px) {
     .lead__caption {
-        padding: 8px 0 0 24px;
+        padding-left: 24px;
     }
 }
 
+
 @media screen and (max-width: 320px) {
     .lead__caption {
-        padding: 7px 0 0 16px;
+        padding-left: 16px;
+        padding-top: 7px;
     }
 }
