--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,6 +6,15 @@
     margin: auto;
 }
 
+@media screen and (max-width: 1024px) {
+    .lead {
+        max-width: 928px;
+    }
+
+}
+
+
+
 @media screen and (max-width: 768px) {
     .lead {
         max-width: 768px;
