--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,7 +2,7 @@
 
 
 .photo-grid {
-    padding: 92px 0 0 0;
+    padding-top: 92px;
     margin: 0 auto 0 auto;
 }
 
@@ -10,13 +10,13 @@
 @media screen and (max-width: 768px) {
     .photo-grid {
         max-width: 720px;
-        padding: 87px 0 0 0;
+        padding-top: 87px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .photo-grid {
         max-width: 288px;
-        padding: 64px 0 0 0;
+        padding-top: 64px;
     }
 }
