--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,3 @@
-/* footer */
-
 .footer {
     max-width: 1184px;
     margin: 0 auto 0 auto;
@@ -27,8 +25,8 @@
 @media screen and (max-width: 320px) {
     .footer {
         max-width: 288px;
-        padding: 65px 0 16px 0;
+        padding-top: 65px;
+        padding-bottom: 16px;
         flex-direction: column;
     }
 }
-
