--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -14,7 +14,8 @@
 
 @media screen and (max-width: 1024px) {
     .lead__subtitle {
-        padding: 32px 5px 46px 0;
+        padding-right: 5px;
+        padding-bottom: 46px;
     }
 
 }
@@ -38,8 +39,9 @@
 
 @media screen and (max-width: 320px) {
     .lead__subtitle {
-        padding: 16px 4px 31px 0;
+        padding-top: 16px;
+        padding-right: 4px;
+        padding-bottom: 31px;
     }
 
 }
-
